[gd_scene load_steps=14 format=3 uid="uid://cxh212xi8v0oi"]

[ext_resource type="Script" uid="uid://dj4wpl4lclgo" path="res://scripts/enter_email_scene.gd" id="1_7lw5k"]
[ext_resource type="Texture2D" uid="uid://0sfy2gs22wmh" path="res://FknQrN.png" id="1_u13by"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="2_7lw5k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e4cgm"]
texture = ExtResource("1_u13by")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1xwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioj7o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1lfn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0uemf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bug0w"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3orp"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvvs5"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdego"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyawn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="EnterEmailScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lw5k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.31
anchor_top = 0.394
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -357.12
offset_top = -255.312
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_e4cgm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -148.0
offset_right = 210.5
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Explanation text" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Įrašykite savo paskyros el. paštą"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "El. paštas"

[node name="Send code button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_f1xwy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ioj7o")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_d1lfn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_0uemf")
theme_override_styles/hover = SubResource("StyleBoxFlat_bug0w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_g3orp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvvs5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_tdego")
theme_override_styles/normal = SubResource("StyleBoxFlat_qyawn")
text = "Išsiusti kodą
"

[node name="exit button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_f1xwy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ioj7o")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_d1lfn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_0uemf")
theme_override_styles/hover = SubResource("StyleBoxFlat_bug0w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_g3orp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvvs5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_tdego")
theme_override_styles/normal = SubResource("StyleBoxFlat_qyawn")
text = "Atgal
"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -247.0
offset_right = 233.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7lw5k")
theme_override_font_sizes/font_size = 60
text = "CogniGame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Send code button" to="." method="_on_send_code_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit button" to="." method="_on_exit_button_pressed"]
